--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
         }
         var j = 0;
-        var txt = "Welcome To My Protfolio Site! ...";
+        var txt = "Welcome To My Portfolio Site! ...";
         function typeWriter() {
 
             if (j < txt.length && j < txt.length - 4) {
@@ -622,7 +622,7 @@
             else if ($(this).attr("id") == "s2") {
                 $("#textCont").css({ top: "422px" });
                 $("#head").text("Projects");
-                $("#text").html("<a href='http://ec2-18-222-129-39.us-east-2.compute.amazonaws.com/'>Cryptobase</a><br><a href='https://chat--alialwahish.repl.co/'>Group Chat<a/><br><a href='https://github.com/alialwahish/domino_new'>Multiplayer Domino Game</a><br><a href='https://github.com/alialwahish/atAppointment'>atAppointments</a><br>Protfolio Site Engineering Tools:<br>HTML,JavaScript and CSS.<br>Works Sited:<br><a href='https://www.artstation.com/artwork/EAoxq'>Art: 'cave' Jared Giglio</a> <br>Anime and Sounds: TV Tokyo and Bandai Co Ltd.(Naruto OSTs)")
+                $("#text").html("<a href='http://ec2-18-222-129-39.us-east-2.compute.amazonaws.com/'>Cryptobase</a><br><a href='https://chat--alialwahish.repl.co/'>Group Chat<a/><br><a href='https://github.com/alialwahish/domino_new'>Multiplayer Domino Game</a><br><a href='https://github.com/alialwahish/atAppointment'>atAppointments</a><br><a href='https://github.com/alialwahish/MyProtfolioSite'>Portfolio Site</a> Engineering Tools:<br>HTML,JavaScript and CSS.<br>Works Sited:<br><a href='https://www.artstation.com/artwork/EAoxq'>Art: 'cave' Jared Giglio</a> <br>Anime and Sounds: TV Tokyo and Bandai Co Ltd.(Naruto OSTs)")
                 $("#profPic").css({ display: "none" });
 
 
